src/test/deca/syntax/invalid/decaObjet/emptyClass/03missedClassName.deca
// Description:
//    tests de programme incorrect lexicalement (token 'clas' non reconnu)
//
// Resultats:
//    03missedClassName.deca:10:6
//
// Historique:
//    cree le 13/06/2022

class {
}
{

}